[package]
name = "ct"
version = "0.1.0"
authors = ["Cedric Gatay <c.gatay@code-troopers.com>"]

[dependencies]
regex = "0.2"
colored = "1.6.0"
itertools = "0.7.4"
serde =  "1.0.58"
# Support for #[derive(Serialize, Deserialize)]. Required if you want Serde
# to work for structs and enums defined in your crate.
serde_derive = "1.0"

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
rocket = "0.3.11"
rocket_codegen = "0.3.11"